# wrlc-alma-item-checks

./: README.md  function_app.py  host.json  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python.yml
alembic/: env.py
alembic/versions/: 0045bda83b24_make_check_email_fields_optional.py  03c18dfaa4d8_add_api_key_to_schema.py  5e3b5aa54900_make_check_email_fields_optional.py  ab7dcf506cc5_add_report_path_to_schema.py  b6832baa9b46_initial_schema.py
src/wrlc/alma/item_checks/: config.py
src/wrlc/alma/item_checks/api/: dependencies.py  main.py
src/wrlc/alma/item_checks/api/models/: user.py
src/wrlc/alma/item_checks/blueprints/: bp_crud_api.py  bp_notifier.py  bp_scfduplicates.py
src/wrlc/alma/item_checks/blueprints/webhooks/: bp_scf.py
src/wrlc/alma/item_checks/handlers/: scf_no_row_tray.py  scf_no_x.py  scf_shared.py  scf_withdrawn.py
src/wrlc/alma/item_checks/models/: base.py  check.py  notification.py  user.py
src/wrlc/alma/item_checks/repositories/: check_repo.py  database.py  notification_repo.py  user_repo.py
src/wrlc/alma/item_checks/services/: check_service.py  job_service.py  notifier_service.py  storage_service.py
src/wrlc/alma/item_checks/templates/: email_template.html.j2
src/wrlc/alma/item_checks/utils/: security.py
src/wrlc_alma_item_checks/: config.py
src/wrlc_alma_item_checks/api/: dependencies.py  main.py
src/wrlc_alma_item_checks/api/models/: check.py  notification.py
src/wrlc_alma_item_checks/blueprints/: bp_crud_api.py  bp_notifier.py  bp_scfduplicates.py
src/wrlc_alma_item_checks/blueprints/timers/: bp_scf_duplicates.py  bp_scf_no_row_tray.py
src/wrlc_alma_item_checks/blueprints/webhooks/: bp_scf.py
src/wrlc_alma_item_checks/handlers/: iz_now_row_tray.py  scf_no_row_tray.py  scf_no_row_tray_report.py  scf_no_x.py  scf_shared.py  scf_withdrawn.py
src/wrlc_alma_item_checks/models/: base.py  check.py  email.py  institution.py  notification.py  user.py
src/wrlc_alma_item_checks/repositories/: check_repo.py  database.py  notification_repo.py  user_repo.py
src/wrlc_alma_item_checks/services/: check_service.py  data_service.py  job_service.py  notifier_service.py  storage_service.py
