[tool.poetry]
name = "wrlc-alma-item-checks"
version = "0.1.0"
description = "Perform checks on any item update in Alma"
authors = [
    "Tom Boone <boone@wrlc.org>"
]
license = "MIT"
readme = "README.md"
packages = [
    {include = "wrlc", from = "src"},
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.23.0"
pydantic = "^2.11.4"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
python-dotenv = "^1.1.0"
azure-storage-blob = "^12.25.1"
azure-storage-queue = "^12.12.0"
pandas = "^2.2.3"
jinja2 = "^3.1.6"
pymysql = "^1.1.1"
fastapi = "^0.116.1"
wrlc-alma-api-client = "^0.1.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
